# wrec

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTES.md  README.md  SECURITY.md  are-you-not.md  package.json
.github/: VOUCHED.td
.github/workflows/: ci.yml  release.yml  vouch-manage-by-issue.yml
apps/mac/: Package.swift
benchmarks/: README.md  package.json
benchmarks/native/: stimulus.swift
benchmarks/results/: 2026-07-23T11-02-50-681Z-8a62b7b.json
benchmarks/src/: release-check.ts  report.ts  run.ts
crates/app/: Cargo.toml
crates/app/src/: app.rs  assets.rs  main.rs  platform.rs  updater.rs
crates/backend/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  run.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/control/src/: client.rs  paths.rs  protocol.rs
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: backend.rs  coordinator.rs  lib.rs  runtime.rs  server.rs  store.rs  test_support.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/macos/: Cargo.toml  build.rs
crates/macos/native/: capture_engine.swift  wrec_helper.swift
crates/macos/src/: lib.rs
crates/store/src/: lib.rs
crates/wrec-app/: Cargo.toml
crates/wrec-app/src/: main.rs
crates/wrec-core/: Cargo.toml
crates/wrec-macos/: Cargo.toml
marketing/: README.md  package.json
packaging/homebrew/: README.md
packaging/macos/: Info.plist  README.md
scripts/: install-app.sh  install-cli.sh  package-cli-macos.sh  package-macos.sh  preview-app-update.sh  update-homebrew.sh
(+35 files in other folders)
