[package]
name = "wrec-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "wrec-cli"
path = "src/main.rs"

[dependencies]
wrec-core = { path = "../core" }
wrec-config = { path = "../config" }
wrec-macos = { path = "../macos" }
wrec-store = { version = "0.1.0", path = "../store" }
ctrlc = { version = "3.4", features = ["termination"] }
serde_json = "1.0.150"
