[package]
name = "wrec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "wrec"
path = "src/main.rs"

[dependencies]
wrec-core = { path = "../core" }
wrec-backend = { path = "../backend" }
wrec-daemon = { path = "../daemon" }
wrec-macos = { path = "../macos" }
serde_json = "1.0.150"
ctrlc = "3.5.2"
